# bazel-project-generator

./: .bazelrc  .cirrus.yml  .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  build.gradle.kts  dependencies.json  dependencies_jvm.json  maven_install.json  settings.gradle.kts
scripts/: test-project-generation.sh
src/main/kotlin/org/cirruslabs/utils/bazel/: App.kt  BUILD.bazel
src/main/kotlin/org/cirruslabs/utils/bazel/collector/: AbstractJVMPackageCollector.kt  AbstractKotlinPackageCollector.kt  BUILD.bazel  DependenciesCollector.kt  JavaPackageCollector.kt  JavaTestPackageCollector.kt  KotlinPackageCollector.kt  KotlinTestPackageCollector.kt  ProtoPackageCollector.kt
src/main/kotlin/org/cirruslabs/utils/bazel/fetcher/: BUILD.bazel  MavenInfoFetcher.kt
src/main/kotlin/org/cirruslabs/utils/bazel/model/: DependenciesDefinition.kt  KotlinPackageInfo.kt  MavenInstallDefinition.kt  PackageInfo.kt  PackageRegistry.kt
src/main/kotlin/org/cirruslabs/utils/bazel/model/base/: BazelTarget.kt  PackageInfo.kt  PackageRegistry.kt
src/main/kotlin/org/cirruslabs/utils/bazel/model/java/: BUILD.bazel  JavaPackageInfo.kt  JavaTestPackageInfo.kt
src/main/kotlin/org/cirruslabs/utils/bazel/model/kotlin/: KotlinPackageInfo.kt  KotlinTestPackageInfo.kt
src/main/kotlin/org/cirruslabs/utils/bazel/model/maven/: BUILD.bazel  MavenDependencyPackageInfo.kt
src/main/kotlin/org/cirruslabs/utils/bazel/model/proto/: JavaProtoInfo.kt  KotlinProtoInfo.kt
src/main/kotlin/org/cirruslabs/utils/bazel/utils/: fs.kt
src/test/kotlin/org/cirruslabs/utils/bazel/fetcher/: BUILD.bazel  MavenInfoFetcherTest.kt
testProjects/: .gitignore
testProjects/all-in-one/: .gitignore  dependencies_jvm.json  maven_install.json  test.sh
testProjects/all-in-one/src/main/java/utils/: TextUtils.java
testProjects/all-in-one/src/main/kotlin/: app.kt
testProjects/all-in-one/src/main/kotlin/foo/: Foo.kt
testProjects/all-in-one/src/main/kotlin/model/: Name.kt
testProjects/all-in-one/src/test/java/utils/: TextUtilsTest.java
testProjects/all-in-one/src/test/kotlin/foo/: FooTest.kt
