load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    jvm_target = "11"
)

java_binary(
  name = "cmd",
  main_class = "org.cirruslabs.utils.bazel.AppKt",
  runtime_deps = [
    "@com_github_jetbrains_kotlin//:kotlin-reflect",
    "//src/main/kotlin/org/cirruslabs/utils/bazel:kt"
  ],
)
