# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model/base:kt",
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model/java:kt",
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model/kotlin:kt",
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model/maven:kt",
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model:kt",
    "@maven//:com_google_code_gson_gson",
  ],
)