# GENERATED
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "kt",
  srcs = glob(["*.kt"]),
  visibility = ["//visibility:public"],
  deps = [
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model/base:kt",
    "//src/main/kotlin/org/cirruslabs/utils/bazel/model:kt",
  ],
)